adjust font size

--- a/daywalker.html
+++ b/daywalker.html
@@ -226,6 +226,7 @@ dayw.tm.startup()
 <style>
 html,
 body {
+  font-size: 5vw;
   height: 100%;
   margin: 0;
   padding: 0;
@@ -234,6 +235,9 @@ body {
   height: 12%;
   background-color: #f0f0f0;
   box-sizing: border-box;
+}
+button {
+  font-size: 5vw;
 }
 #dayw-tasks {
   height:74%;
