adjust sizing and layout

--- a/daywalker.html
+++ b/daywalker.html
@@ -16,6 +16,8 @@
 
 <div id="section3">
 <div id="dayw-status">Test Output</div>
+<div>Line 2</div>
+<div>Sections</div>
 </div>
 
 <script>
@@ -224,6 +226,7 @@ dayw.tm.startup()
 </html>
 
 <style>
+
 html,
 body {
   font-size: 5vw;
@@ -232,21 +235,22 @@ body {
   padding: 0;
 }
 #section1 {
-  height: 12%;
+  padding: 1vw;
+  height: 14vw;
   background-color: #f0f0f0;
   box-sizing: border-box;
 }
-button {
+input, button {
   font-size: 5vw;
 }
 #dayw-tasks {
-  height:74%;
+  height:73vw;
   background-color: #e0e0e0;
   box-sizing: border-box;
   padding: 1vh;
 }
 #section3 {
-  height: 15%;
+  height: 19vw;
   background-color: #d0d0d0;
   box-sizing: border-box;
   padding: 1vh;
