update sizing and layout

--- a/daywalker.html
+++ b/daywalker.html
@@ -229,28 +229,28 @@ dayw.tm.startup()
 
 html,
 body {
-  font-size: 5vw;
+  font-size: 4vh;
   height: 100%;
   margin: 0;
   padding: 0;
 }
 #section1 {
-  padding: 1vw;
-  height: 14vw;
+  padding: 1vh;
+  height: 12vh;
   background-color: #f0f0f0;
   box-sizing: border-box;
 }
 input, button {
-  font-size: 5vw;
+  font-size: 4vh;
 }
 #dayw-tasks {
-  height:73vw;
+  height:72vh;
   background-color: #e0e0e0;
   box-sizing: border-box;
   padding: 1vh;
 }
 #section3 {
-  height: 19vw;
+  height: 16vh;
   background-color: #d0d0d0;
   box-sizing: border-box;
   padding: 1vh;
