--- a/daywalker.html
+++ b/daywalker.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>Daywalker 0.1</title>
+<link rel="manifest" href="daywalker.webmanifest">
 </head>
 <body>
 
@@ -242,7 +244,7 @@ body {
 input, button {
   font-size: 4vh;
 }
-button { margin-right: 1vh; }
+button { margin-right: 1vh; margin-bottom: 1vh; }
 #dayw-tasks {
   height:72vh;
   background-color: #e0e0e0;
