add refresh button

--- a/daywalker.html
+++ b/daywalker.html
@@ -17,7 +17,7 @@
 <div id="section3">
 <div id="dayw-status">Test Output</div>
 <div>Line 2</div>
-<div>Sections</div>
+<div><button onclick="location.reload();">&#x27F3;</button></div>
 </div>
 
 <script>
