add non-functional menu placeholder

--- a/daywalker.html
+++ b/daywalker.html
@@ -7,7 +7,7 @@
 <body>
 
 <div id="section1">
-<div id="current-time">NOW</div>
+&#9776; <span id="current-time">NOW</span>
 <input type="text" id="dayw-cmd" name="cmd" autofocus="true" style="right:100%;width:100%;"><br>
 </div>
 
