fix text sizing again

--- a/daywalker.html
+++ b/daywalker.html
@@ -243,14 +243,14 @@ dayw.tm.startup()
 
 html,
 body {
-  font-size: x-large; /*4vh;*/
+  font-size: 4vw; /*4vh;*/
   height: 100%;
   margin: 0;
   padding: 0;
 }
 #section1 {
-  padding: 1vh;
-  height: 12vh;
+  padding: 1vw;
+  height: 12vw;
   background-color: #f0f0f0;
   box-sizing: border-box;
 }
