adjust font size and retry PWA

--- a/daywalker.html
+++ b/daywalker.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="manifest" href="/daywalker.webmanifest" />
 <title>Daywalker 0.1</title>
-<link rel="manifest" href="/daywalker.webmanifest">
 </head>
 <body>
 
@@ -18,7 +18,7 @@
 <div id="section3">
 <div id="dayw-status">Test Output</div>
 <div>Line 2</div>
-<div><button onclick="location.reload();">&#x27F3;</button></div>
+<div><button onclick="location.reload();">&#x27F3;</button><img src="daywalker.png"/> </div>
 </div>
 
 <script>
@@ -243,7 +243,7 @@ dayw.tm.startup()
 
 html,
 body {
-  font-size: 4vw; /*4vh;*/
+  font-size: 6vw; /*4vh;*/
   height: 100%;
   margin: 0;
   padding: 0;
