more hand waving for PWA

--- a/daywalker.html
+++ b/daywalker.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="manifest" href="/daywalker.webmanifest" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Daywalker 0.1</title>
 </head>
 <body>
@@ -18,7 +19,7 @@
 <div id="section3">
 <div id="dayw-status">Test Output</div>
 <div>Line 2</div>
-<div><button onclick="location.reload();">&#x27F3;</button><img src="daywalker.png"/> </div>
+<div><button onclick="location.reload();">&#x27F3;</button><img src="daywalker.png" width="6vw" height="6vw"/> </div>
 </div>
 
 <script>
