--- a/daywalker.html
+++ b/daywalker.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-<div id="section1">
-&#9776; <span id="current-time">NOW</span>
+<div id="header">
+&nbsp;&#9776; <span id="current-time">NOW</span>
 <div style="display:none;">Font Size <input id="dayw-font-size" type="number" min="6" step="0.5" size="4" name="font-size" value="12"> <button>Set</button></div>
 <input type="text" id="dayw-cmd" name="cmd" autofocus="true" style="right:100%;width:100%;"><br>
 </div>
@@ -16,10 +16,9 @@
 <div id="dayw-tasks">
 <button onclick="dayw.ui.addNew(this)" value="+">+</button><button onclick="dayw.ui.doAction(this)" value="idle">idle</button></div>
 
-<div id="section3">
+<div id="footer">
 <div id="dayw-status">Test Output</div>
-<div>Line 2</div>
-<div><button onclick="location.reload();">&#x27F3;</button><img src="daywalker.png" width="6vw" height="6vw"/> </div>
+<div id="dayw-shortcuts"><button onclick="location.reload();">&#x27F3;</button><img src="daywalker.png" width="6vw" height="6vw"/> </div>
 </div>
 
 <script>
@@ -248,10 +247,13 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
 }
-#section1 {
+#header {
+  flex: 0 0 auto;
   padding: 1vw;
-  height: 12vw;
+  //height: 12vw;
   background-color: #f0f0f0;
   box-sizing: border-box;
 }
@@ -259,15 +261,16 @@ body {
 input, button {
   font-size: inherit;
 }
-button { margin-right: 1vh; margin-bottom: 1vh; }
+button { margin-right: 1vw; margin-bottom: 1vw; }
 #dayw-tasks {
-  height:72vh;
+  flex: 1;
   background-color: #e0e0e0;
   box-sizing: border-box;
-  padding: 1vh;
+  padding: 1vw;
 }
-#section3 {
-  height: 16vh;
+#footer {
+  flex: 0 0 auto;
+  //height: 16vh;
   background-color: #d0d0d0;
   box-sizing: border-box;
   padding: 1vh;
