--- a/index.html
+++ b/index.html
@@ -3,3 +3,10 @@
 <body>
 <h1>Apps</h1>
 <a href="daywalker.html">Daywalker</a>
+<a href="daywalker-history.html">History</a>
+<style>
+
+body {
+  font-size: 6vw;
+}
+</style>
