--- a/daywalker-history.html
+++ b/daywalker-history.html
@@ -109,11 +109,11 @@ dayw.dt.durationStr = function(sCur, sPrev) {
     return "-"
     //return "" + (ms/1000).toFixed(0) + " seconds"
   } else if (ms < 3600000) {
-    return "" + (ms/60000).toFixed(0) + " mins"
+    return "" + (ms/60000).toFixed(0) + " m"
   } else if (ms < 86400000) {
-    return "" + (ms/3600000).toFixed(1) + " hrs"
+    return "" + (ms/3600000).toFixed(1) + " h"
   } else {
-    return "" + (ms/86400000).toFixed(1) + " days"
+    return "" + (ms/86400000).toFixed(1) + " d"
   }
 }
 
@@ -302,6 +302,10 @@ body {
 #current-time { width: 100%; text-align: center; }
 input, button {
   font-size: inherit;
+}
+td {
+  font-size: inherit;
+  vertical-align: top;
 }
 button { margin-right: 1vw; margin-bottom: 1vw; }
 #dayw-history {
